[package]
name = "static_test"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/static_test"
homepage = "https://github.com/koute/static_test"
documentation = "https://docs.rs/static_test/*/static_test/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["test", "tests", "testing"]
categories = ["development-tools", "development-tools::testing"]
description = "Attribute macro for writing tests which check that a given condition ALWAYS holds true or that a given code path is ALWAYS unreachable"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full"] }
quote = "1"

[features]
default = []
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]
